--- a/marklibrary/build.gradle
+++ b/marklibrary/build.gradle
@@ -1,12 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "actionbartoast.mark.com.cn.volleydemo"
-        minSdkVersion 14
+        minSdkVersion 8
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -21,6 +20,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile project(':marklibrary')
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile files('libs/gson-2.2.1.jar')
+    compile files('libs/volley.jar')
 }
